# chip-8

./: Cargo.toml  LICENSE  README.md
chip-8/: Cargo.toml
chip-8-core/: Cargo.toml
chip-8-core/src/: display.rs  input.rs  lib.rs  mem.rs  niche_opt.rs  rng.rs
chip-8-emu/: Cargo.toml
chip-8-emu/src/: main.rs
chip-8-emu/src/renderers/: mod.rs  terminal.rs
chip-8-emu/src/renderers/gui/: mod.rs
chip-8-emu/src/renderers/gui/ui/: mod.rs
chip-8/src/: main.rs  rgb.rs
chip-8/src/renderers/: gui.rs
chip-8/src/renderers/gui/: ui.rs
chip-8/src/renderers/gui/ui/: keymap.rs
