[package]
name = "chip-8"
version = "0.1.0"
edition = "2024"

[dependencies]
chip-8-core = { workspace = true, features = ["std"] }
clap = { version = "4.6.1", features = ["color", "derive"] }
thiserror = "2.0.18"
rand = { version = "0.10.1", features = ["chacha"] }
eyre = "0.6.12"
crossterm = "0.29.0"
iced = { version = "0.14.0", features = ["canvas", "tokio"] }
flume = "0.12.0"